Making all method handles final and static to the created classes